# hhgl-lab

./: .gitignore
client/: index.html  package-lock.json  package.json  vite.config.ts
handoff/: 01-architecture.md  02-database-schema.md  03-modules-specs.md  04-design-tokens.md  05-claude-code-prompts.md  06-glossaire-debutant.md  README.md  (+1 more)
server/: .env.example  pyproject.toml  requirements.txt  seed_admin.py
server/alembic/: env.py
server/alembic/versions/: 10caabfa1946_initial_schema_users.py  7948a72d8bbd_add_database_module_tables.py  c0d498cc29dc_notebook_module.py  d4e5f6a7b8c9_bibliography_module.py  e5f6a7b8c9d0_bibliography_collections.py  f6a7b8c9d0e1_protocols_module.py  g7h8i9j0k1l2_bibliography_added_by.py  h8i9j0k1l2m3_experiment_lock.py  i9j0k1l2m3n4_primer_category.py  j0k1l2m3n4o5_primer_infusion_fields.py
server/app/: config.py  deps.py  main.py
server/app/api/: _resource_router.py  antibodies.py  bibliography.py  cell_line_passages.py  cell_lines.py  dashboard.py  notebook.py  plasmids.py  primers.py  protocols.py  search.py  strains.py  users.py  viruses.py
server/app/auth/: jwt.py  routes.py
server/app/db/: session.py
server/app/db/models/: __init__.py  antibody.py  bibliography.py  cell_line.py  notebook.py  plasmid.py  primer.py  protocols.py  strain.py  user.py  virus.py
server/app/schemas/: antibody.py  bibliography.py  cell_line.py  notebook.py  plasmid.py  primer.py  protocols.py  strain.py  virus.py
server/hhgl_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/launcher/: launcher.py  launcher.spec
(+84 files in other folders)
